# par-trans

./: .buildinfo  README.md  genindex.html  index.html  jax_par_trans.html  objects.inv  par_trans.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  jax_par_trans.doctree  par_trans.doctree
.github/workflows/: build_docs.yaml
_modules/: index.html
_modules/jax_par_trans/expv/: expv.html  utils.html
_modules/jax_par_trans/manifolds/: flag.html  stiefel.html
_modules/par_trans/manifolds/: flag.html  glp_beta.html  so_alpha.html  stiefel.html
_modules/par_trans/utils/: expm_multiply_np.html  utils.html
_sources/: jax_par_trans.rst.txt  par_trans.rst.txt
docs/: conf.py  index.rst
examples/: JAXFlagParallel.ipynb  JAXStiefelParallel.ipynb  NumpyFlagParallel.ipynb  NumpyGL.ipynb  NumpySO.ipynb  NumpyStiefelParallel.ipynb  README.md
jax_par_trans/: __init__.py
jax_par_trans/expv/: __init__.py  expv.py  utils.py
jax_par_trans/manifolds/: __init__.py  flag.py  stiefel.py
par_trans/manifolds/: __init__.py  flag.py  glp_beta.py  so_alpha.py  stiefel.py
par_trans/utils/: __init__.py  expm_multiply_np.py  utils.py
tests/: test_jax_flag.py  test_jax_stiefel.py  test_np_flag.py  test_np_glp.py  test_np_so.py  test_np_stiefel.py
